--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antd/4.21.7/antd.min.css"
         integrity="sha512-oYtzh9YLPmx+kquDHryaprXgFm9zcOqJYZ9Fk3sMu3XHZi6r3ZCkl8ojVbHFXdEFmNHcp7VEI3qmWe4uh6j0Bg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>OurYard Demo</title>
+    <title>D&D 5e Character Sheet</title>
 </head>
 
 <body>
